# ros-devkit

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-shared-bash-library.md  0001-shared-library-packages.md  0002-package-xml-and-skill-local-lib-migration.md
docs/agents/: domain.md
install/: configure_ros_devkit.sh  install.sh  update.sh
install/lib/: install_common.sh
scripts/: configure_ros_devkit.sh  dev_ros_devkit.sh  install.sh  update.sh
skills/.curated/ros2/cmakelists/: SKILL.md
skills/.curated/ros2/cpp-node/: SKILL.md
skills/.curated/ros2/description-scaffold/: SKILL.md
skills/.curated/ros2/gazebo-simulation/: SKILL.md
skills/.curated/ros2/launch/: SKILL.md
skills/.curated/ros2/mcu-freertos/: SKILL.md
skills/.curated/ros2/mcu-protocol/: SKILL.md
skills/.curated/ros2/robot-profile/: SKILL.md
skills/.curated/ros2/ros2-control/: SKILL.md
skills/.curated/ros2/ros2-control-pluginize/: SKILL.md
skills/.curated/ros2/ros2-dockerfile/: SKILL.md
skills/.curated/ros2/ros2-sensor/: SKILL.md
skills/.curated/ros2/scripts/: cmake.py  diagnostics.py  doctor.py
skills/.curated/ros2/tests/: test_cmake_lib.py  test_package_xml_lib.py
src/ros_devkit/: __init__.py  cli.py  config.py  doctor.py  registry.py
src/ros_devkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_config.py  test_description_scaffold_lib.py  test_gazebo_simulation_lib.py  test_install.py  test_ros2_control_pluginize.py  test_update.py
(+109 files in other folders)
