[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ros-devkit"
version = "0.1.0"
description = "CLI dispatcher for installed ROS2 DevKit agent skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
ros-devkit = "ros_devkit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
